# fedora-packager-container

./: .gitignore  README.md  flatpak.sh  meson.build  org.fedoraproject.PackagerContainer.json
data/: Dockerfile  bashrc  flatpak-host.sh  mbs-mock.cfg
scripts/: fedpkg-c.in
src/: host-command.c  host-command.h  run-host.c
